@@ -20,6 +20,8 @@ import org.elasticsearch.script.VectorScoreScriptUtils.Hamming;
 import org.elasticsearch.script.VectorScoreScriptUtils.L1Norm;
 import org.elasticsearch.script.VectorScoreScriptUtils.L2Norm;
 import org.elasticsearch.script.field.vectors.BinaryDenseVectorDocValuesField;
+import org.elasticsearch.script.field.vectors.BitBinaryDenseVectorDocValuesField;
+import org.elasticsearch.script.field.vectors.BitKnnDenseVectorDocValuesField;
 import org.elasticsearch.script.field.vectors.ByteBinaryDenseVectorDocValuesField;
 import org.elasticsearch.script.field.vectors.ByteKnnDenseVectorDocValuesField;
 import org.elasticsearch.script.field.vectors.DenseVectorDocValuesField;
@@ -27,7 +29,6 @@ import org.elasticsearch.script.field.vectors.KnnDenseVectorDocValuesField;
 import org.elasticsearch.test.ESTestCase;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.HexFormat;
 import java.util.List;
 
@@ -41,20 +42,20 @@ public class VectorScoreScriptUtilsTests extends ESTestCase {
         String fieldName = "vector";
         int dims = 5;
         float[] docVector = new float[] { 230.0f, 300.33f, -34.8988f, 15.555f, -200.0f };
-        List<Number> queryVector = Arrays.asList(0.5f, 111.3f, -13.0f, 14.8f, -156.0f);
-        List<Number> invalidQueryVector = Arrays.asList(0.5, 111.3);
+        List<Number> queryVector = List.of(0.5f, 111.3f, -13.0f, 14.8f, -156.0f);
+        List<Number> invalidQueryVector = List.of(0.5, 111.3);
 
         List<DenseVectorDocValuesField> fields = List.of(
             new BinaryDenseVectorDocValuesField(
                 BinaryDenseVectorScriptDocValuesTests.wrap(
                     new float[][] { docVector },
                     ElementType.FLOAT,
-                    IndexVersions.MINIMUM_COMPATIBLE
+                    IndexVersions.MINIMUM_READONLY_COMPATIBLE
                 ),
                 "test",
                 ElementType.FLOAT,
                 dims,
-                IndexVersions.MINIMUM_COMPATIBLE
+                IndexVersions.MINIMUM_READONLY_COMPATIBLE
             ),
             new BinaryDenseVectorDocValuesField(
                 BinaryDenseVectorScriptDocValuesTests.wrap(new float[][] { docVector }, ElementType.FLOAT, IndexVersion.current()),
@@ -139,8 +140,8 @@ public class VectorScoreScriptUtilsTests extends ESTestCase {
         String fieldName = "vector";
         int dims = 5;
         float[] docVector = new float[] { 1, 127, -128, 5, -10 };
-        List<Number> queryVector = Arrays.asList((byte) 1, (byte) 125, (byte) -12, (byte) 2, (byte) 4);
-        List<Number> invalidQueryVector = Arrays.asList((byte) 1, (byte) 1);
+        List<Number> queryVector = List.of((byte) 1, (byte) 125, (byte) -12, (byte) 2, (byte) 4);
+        List<Number> invalidQueryVector = List.of((byte) 1, (byte) 1);
         String hexidecimalString = HexFormat.of().formatHex(new byte[] { 1, 125, -12, 2, 4 });
 
         List<DenseVectorDocValuesField> fields = List.of(
@@ -181,11 +182,12 @@ public class VectorScoreScriptUtilsTests extends ESTestCase {
             for (int i = 0; i < queryVectorArray.length; i++) {
                 queryVectorArray[i] = queryVector.get(i).floatValue();
             }
-            UnsupportedOperationException uoe = expectThrows(
-                UnsupportedOperationException.class,
-                () -> field.getInternal().cosineSimilarity(queryVectorArray, true)
+            assertEquals(
+                "cosineSimilarity result is not equal to the expected value!",
+                cosineSimilarityExpected,
+                field.getInternal().cosineSimilarity(queryVectorArray, true),
+                0.001
             );
-            assertThat(uoe.getMessage(), containsString("use [double cosineSimilarity(byte[] queryVector, float qvMagnitude)] instead"));
 
             // Check each function rejects query vectors with the wrong dimension
             IllegalArgumentException e = expectThrows(
@@ -233,11 +235,66 @@ public class VectorScoreScriptUtilsTests extends ESTestCase {
         }
     }
 
+    public void testBitVectorClassBindingsDotProduct() throws IOException {
+        String fieldName = "vector";
+        int dims = 8;
+        float[] docVector = new float[] { 124 };
+        // 124 in binary is b01111100
+        List<Number> queryVector = List.of((byte) 1, (byte) 125, (byte) -12, (byte) 2, (byte) 4, (byte) 1, (byte) 125, (byte) -12);
+        List<Number> floatQueryVector = List.of(1.4f, -1.4f, 0.42f, 0.0f, 1f, -1f, -0.42f, 1.2f);
+        List<Number> invalidQueryVector = List.of((byte) 1, (byte) 1);
+        String hexidecimalString = HexFormat.of().formatHex(new byte[] { 124 });
+
+        List<DenseVectorDocValuesField> fields = List.of(
+            new BitBinaryDenseVectorDocValuesField(
+                BinaryDenseVectorScriptDocValuesTests.wrap(new float[][] { docVector }, ElementType.BIT, IndexVersion.current()),
+                "test",
+                ElementType.BIT,
+                dims
+            ),
+            new BitKnnDenseVectorDocValuesField(KnnDenseVectorScriptDocValuesTests.wrapBytes(new float[][] { docVector }), "test", dims)
+        );
+        for (DenseVectorDocValuesField field : fields) {
+            field.setNextDocId(0);
+
+            ScoreScript scoreScript = mock(ScoreScript.class);
+            when(scoreScript.field(fieldName)).thenAnswer(mock -> field);
+
+            // Test cosine similarity explicitly, as it must perform special logic on top of the doc values
+            DotProduct function = new DotProduct(scoreScript, queryVector, fieldName);
+            assertEquals("dotProduct result is not equal to the expected value!", -12 + 2 + 4 + 1 + 125, function.dotProduct(), 0.001);
+
+            function = new DotProduct(scoreScript, floatQueryVector, fieldName);
+            assertEquals(
+                "dotProduct result is not equal to the expected value!",
+                -1.4f + 0.42f + 0f + 1f - 1f,
+                function.dotProduct(),
+                0.001
+            );
+
+            function = new DotProduct(scoreScript, hexidecimalString, fieldName);
+            assertEquals("dotProduct result is not equal to the expected value!", Integer.bitCount(124), function.dotProduct(), 0.0);
+
+            // Check each function rejects query vectors with the wrong dimension
+            IllegalArgumentException e = expectThrows(
+                IllegalArgumentException.class,
+                () -> new DotProduct(scoreScript, invalidQueryVector, fieldName)
+            );
+            assertThat(
+                e.getMessage(),
+                containsString(
+                    "query vector has an incorrect number of dimensions. "
+                        + "Must be [1] for bitwise operations, or [8] for byte wise operations: provided [2]."
+                )
+            );
+        }
+    }
+
     public void testByteVsFloatSimilarity() throws IOException {
         int dims = 5;
         float[] docVector = new float[] { 1f, 127f, -128f, 5f, -10f };
-        List<Number> listFloatVector = Arrays.asList(1f, 125f, -12f, 2f, 4f);
-        List<Number> listByteVector = Arrays.asList((byte) 1, (byte) 125, (byte) -12, (byte) 2, (byte) 4);
+        List<Number> listFloatVector = List.of(1f, 125f, -12f, 2f, 4f);
+        List<Number> listByteVector = List.of((byte) 1, (byte) 125, (byte) -12, (byte) 2, (byte) 4);
         float[] floatVector = new float[] { 1f, 125f, -12f, 2f, 4f };
         byte[] byteVector = new byte[] { (byte) 1, (byte) 125, (byte) -12, (byte) 2, (byte) 4 };
 
@@ -246,12 +303,12 @@ public class VectorScoreScriptUtilsTests extends ESTestCase {
                 BinaryDenseVectorScriptDocValuesTests.wrap(
                     new float[][] { docVector },
                     ElementType.FLOAT,
-                    IndexVersions.MINIMUM_COMPATIBLE
+                    IndexVersions.MINIMUM_READONLY_COMPATIBLE
                 ),
                 "field0",
                 ElementType.FLOAT,
                 dims,
-                IndexVersions.MINIMUM_COMPATIBLE
+                IndexVersions.MINIMUM_READONLY_COMPATIBLE
             ),
             new BinaryDenseVectorDocValuesField(
                 BinaryDenseVectorScriptDocValuesTests.wrap(new float[][] { docVector }, ElementType.FLOAT, IndexVersion.current()),
@@ -285,11 +342,7 @@ public class VectorScoreScriptUtilsTests extends ESTestCase {
             switch (field.getElementType()) {
                 case BYTE -> {
                     assertEquals(field.getName(), dotProductExpected, field.get().dotProduct(byteVector));
-                    UnsupportedOperationException e = expectThrows(
-                        UnsupportedOperationException.class,
-                        () -> field.get().dotProduct(floatVector)
-                    );
-                    assertThat(e.getMessage(), containsString("use [int dotProduct(byte[] queryVector)] instead"));
+                    assertEquals(field.getName(), dotProductExpected, field.get().dotProduct(floatVector), 0.001);
                 }
                 case FLOAT -> {
                     assertEquals(field.getName(), dotProductExpected, field.get().dotProduct(floatVector), 0.001);
@@ -366,14 +419,7 @@ public class VectorScoreScriptUtilsTests extends ESTestCase {
             switch (field.getElementType()) {
                 case BYTE -> {
                     assertEquals(field.getName(), cosineSimilarityExpected, field.get().cosineSimilarity(byteVector), 0.001);
-                    UnsupportedOperationException e = expectThrows(
-                        UnsupportedOperationException.class,
-                        () -> field.get().cosineSimilarity(floatVector)
-                    );
-                    assertThat(
-                        e.getMessage(),
-                        containsString("use [double cosineSimilarity(byte[] queryVector, float qvMagnitude)] instead")
-                    );
+                    assertEquals(field.getName(), cosineSimilarityExpected, field.get().cosineSimilarity(floatVector), 0.001);
                 }
                 case FLOAT -> {
                     assertEquals(field.getName(), cosineSimilarityExpected, field.get().cosineSimilarity(floatVector), 0.001);
@@ -414,81 +460,55 @@ public class VectorScoreScriptUtilsTests extends ESTestCase {
             ScoreScript scoreScript = mock(ScoreScript.class);
             when(scoreScript.field(fieldName)).thenAnswer(mock -> field);
 
-            IllegalArgumentException e;
-
-            e = expectThrows(IllegalArgumentException.class, () -> new DotProduct(scoreScript, greaterThanVector, fieldName));
-            assertEquals(
-                e.getMessage(),
-                "element_type [byte] vectors only support integers between [-128, 127] but found [128.0] at dim [0]; "
-                    + "Preview of invalid vector: [128.0]"
+            expectThrows(
+                IllegalArgumentException.class,
+                containsString(
+                    "element_type [byte] vectors only support integers between [-128, 127] but found [128.0] at dim [0]; "
+                        + "Preview of invalid vector: [128.0]"
+                ),
+                () -> new L1Norm(scoreScript, greaterThanVector, fieldName)
             );
-            e = expectThrows(IllegalArgumentException.class, () -> new L1Norm(scoreScript, greaterThanVector, fieldName));
-            assertEquals(
-                e.getMessage(),
-                "element_type [byte] vectors only support integers between [-128, 127] but found [128.0] at dim [0]; "
-                    + "Preview of invalid vector: [128.0]"
-            );
-            e = expectThrows(IllegalArgumentException.class, () -> new L2Norm(scoreScript, greaterThanVector, fieldName));
-            assertEquals(
-                e.getMessage(),
-                "element_type [byte] vectors only support integers between [-128, 127] but found [128.0] at dim [0]; "
-                    + "Preview of invalid vector: [128.0]"
-            );
-            e = expectThrows(IllegalArgumentException.class, () -> new CosineSimilarity(scoreScript, greaterThanVector, fieldName));
-            assertEquals(
-                e.getMessage(),
-                "element_type [byte] vectors only support integers between [-128, 127] but found [128.0] at dim [0]; "
-                    + "Preview of invalid vector: [128.0]"
+            expectThrows(
+                IllegalArgumentException.class,
+                containsString(
+                    "element_type [byte] vectors only support integers between [-128, 127] but found [128.0] at dim [0]; "
+                        + "Preview of invalid vector: [128.0]"
+                ),
+                () -> new L2Norm(scoreScript, greaterThanVector, fieldName)
             );
 
-            e = expectThrows(IllegalArgumentException.class, () -> new DotProduct(scoreScript, lessThanVector, fieldName));
-            assertEquals(
-                e.getMessage(),
-                "element_type [byte] vectors only support integers between [-128, 127] but found [-129.0] at dim [0]; "
-                    + "Preview of invalid vector: [-129.0]"
+            expectThrows(
+                IllegalArgumentException.class,
+                containsString(
+                    "element_type [byte] vectors only support integers between [-128, 127] but found [-129.0] at dim [0]; "
+                        + "Preview of invalid vector: [-129.0]"
+                ),
+                () -> new L1Norm(scoreScript, lessThanVector, fieldName)
             );
-            e = expectThrows(IllegalArgumentException.class, () -> new L1Norm(scoreScript, lessThanVector, fieldName));
-            assertEquals(
-                e.getMessage(),
-                "element_type [byte] vectors only support integers between [-128, 127] but found [-129.0] at dim [0]; "
-                    + "Preview of invalid vector: [-129.0]"
-            );
-            e = expectThrows(IllegalArgumentException.class, () -> new L2Norm(scoreScript, lessThanVector, fieldName));
-            assertEquals(
-                e.getMessage(),
-                "element_type [byte] vectors only support integers between [-128, 127] but found [-129.0] at dim [0]; "
-                    + "Preview of invalid vector: [-129.0]"
-            );
-            e = expectThrows(IllegalArgumentException.class, () -> new CosineSimilarity(scoreScript, lessThanVector, fieldName));
-            assertEquals(
-                e.getMessage(),
-                "element_type [byte] vectors only support integers between [-128, 127] but found [-129.0] at dim [0]; "
-                    + "Preview of invalid vector: [-129.0]"
+            expectThrows(
+                IllegalArgumentException.class,
+                containsString(
+                    "element_type [byte] vectors only support integers between [-128, 127] but found [-129.0] at dim [0]; "
+                        + "Preview of invalid vector: [-129.0]"
+                ),
+                () -> new L2Norm(scoreScript, lessThanVector, fieldName)
             );
 
-            e = expectThrows(IllegalArgumentException.class, () -> new DotProduct(scoreScript, decimalVector, fieldName));
-            assertEquals(
-                e.getMessage(),
-                "element_type [byte] vectors only support non-decimal values but found decimal value [0.5] at dim [0]; "
-                    + "Preview of invalid vector: [0.5]"
+            expectThrows(
+                IllegalArgumentException.class,
+                containsString(
+                    "element_type [byte] vectors only support non-decimal values but found decimal value [0.5] at dim [0]; "
+                        + "Preview of invalid vector: [0.5]"
+                ),
+                () -> new L1Norm(scoreScript, decimalVector, fieldName)
             );
-            e = expectThrows(IllegalArgumentException.class, () -> new L1Norm(scoreScript, decimalVector, fieldName));
-            assertEquals(
-                e.getMessage(),
-                "element_type [byte] vectors only support non-decimal values but found decimal value [0.5] at dim [0]; "
-                    + "Preview of invalid vector: [0.5]"
-            );
-            e = expectThrows(IllegalArgumentException.class, () -> new L2Norm(scoreScript, decimalVector, fieldName));
-            assertEquals(
-                e.getMessage(),
-                "element_type [byte] vectors only support non-decimal values but found decimal value [0.5] at dim [0]; "
-                    + "Preview of invalid vector: [0.5]"
-            );
-            e = expectThrows(IllegalArgumentException.class, () -> new CosineSimilarity(scoreScript, decimalVector, fieldName));
-            assertEquals(
-                e.getMessage(),
-                "element_type [byte] vectors only support non-decimal values but found decimal value [0.5] at dim [0]; "
-                    + "Preview of invalid vector: [0.5]"
+            expectThrows(
+                IllegalArgumentException.class,
+                containsString(
+                    "element_type [byte] vectors only support non-decimal values but found decimal value [0.5] at dim [0]; "
+                        + "Preview of invalid vector: [0.5]"
+                ),
+                () -> new L2Norm(scoreScript, decimalVector, fieldName)
             );
         }
     }
