@@ -14,37 +14,43 @@ import org.elasticsearch.TransportVersions;
 import org.elasticsearch.core.Nullable;
 
 import java.util.Collections;
-import java.util.List;
+import java.util.NavigableSet;
 import java.util.Random;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.stream.Collectors;
 
-import static org.elasticsearch.KnownTransportVersions.ALL_VERSIONS;
+import static org.apache.lucene.tests.util.LuceneTestCase.random;
 
 public class TransportVersionUtils {
+
+    private static final NavigableSet<TransportVersion> RELEASED_VERSIONS = Collections.unmodifiableNavigableSet(
+        new TreeSet<>(TransportVersion.getAllVersions())
+    );
+
     /** Returns all released versions */
-    public static List<TransportVersion> allReleasedVersions() {
-        return ALL_VERSIONS;
+    public static NavigableSet<TransportVersion> allReleasedVersions() {
+        return RELEASED_VERSIONS;
     }
 
     /** Returns the oldest known {@link TransportVersion} */
     public static TransportVersion getFirstVersion() {
-        return ALL_VERSIONS.get(0);
+        return allReleasedVersions().getFirst();
     }
 
     /** Returns a random {@link TransportVersion} from all available versions. */
     public static TransportVersion randomVersion() {
-        return ESTestCase.randomFrom(ALL_VERSIONS);
+        return VersionUtils.randomFrom(random(), allReleasedVersions(), TransportVersion::fromId);
     }
 
     /** Returns a random {@link TransportVersion} from all available versions without the ignore set */
     public static TransportVersion randomVersion(Set<TransportVersion> ignore) {
-        return ESTestCase.randomFrom(ALL_VERSIONS.stream().filter(v -> ignore.contains(v) == false).collect(Collectors.toList()));
+        return ESTestCase.randomFrom(allReleasedVersions().stream().filter(v -> ignore.contains(v) == false).collect(Collectors.toList()));
     }
 
     /** Returns a random {@link TransportVersion} from all available versions. */
     public static TransportVersion randomVersion(Random random) {
-        return ALL_VERSIONS.get(random.nextInt(ALL_VERSIONS.size()));
+        return VersionUtils.randomFrom(random, allReleasedVersions(), TransportVersion::fromId);
     }
 
     /** Returns a random {@link TransportVersion} between <code>minVersion</code> and <code>maxVersion</code> (inclusive). */
@@ -57,23 +63,21 @@ public class TransportVersionUtils {
             throw new IllegalArgumentException("maxVersion [" + maxVersion + "] cannot be less than minVersion [" + minVersion + "]");
         }
 
-        int minVersionIndex = 0;
+        NavigableSet<TransportVersion> versions = allReleasedVersions();
         if (minVersion != null) {
-            minVersionIndex = Collections.binarySearch(ALL_VERSIONS, minVersion);
+            if (versions.contains(minVersion) == false) {
+                throw new IllegalArgumentException("minVersion [" + minVersion + "] does not exist.");
+            }
+            versions = versions.tailSet(minVersion, true);
         }
-        int maxVersionIndex = ALL_VERSIONS.size() - 1;
         if (maxVersion != null) {
-            maxVersionIndex = Collections.binarySearch(ALL_VERSIONS, maxVersion);
+            if (versions.contains(maxVersion) == false) {
+                throw new IllegalArgumentException("maxVersion [" + maxVersion + "] does not exist.");
+            }
+            versions = versions.headSet(maxVersion, true);
         }
-        if (minVersionIndex < 0) {
-            throw new IllegalArgumentException("minVersion [" + minVersion + "] does not exist.");
-        } else if (maxVersionIndex < 0) {
-            throw new IllegalArgumentException("maxVersion [" + maxVersion + "] does not exist.");
-        } else {
-            // minVersionIndex is inclusive so need to add 1 to this index
-            int range = maxVersionIndex + 1 - minVersionIndex;
-            return ALL_VERSIONS.get(minVersionIndex + random.nextInt(range));
-        }
+
+        return VersionUtils.randomFrom(random, versions, TransportVersion::fromId);
     }
 
     public static TransportVersion getPreviousVersion() {
@@ -83,16 +87,11 @@ public class TransportVersionUtils {
     }
 
     public static TransportVersion getPreviousVersion(TransportVersion version) {
-        int place = Collections.binarySearch(ALL_VERSIONS, version);
-        if (place < 0) {
-            // version does not exist - need the item before the index this version should be inserted
-            place = -(place + 1);
-        }
-
-        if (place < 1) {
+        TransportVersion lower = allReleasedVersions().lower(version);
+        if (lower == null) {
             throw new IllegalArgumentException("couldn't find any released versions before [" + version + "]");
         }
-        return ALL_VERSIONS.get(place - 1);
+        return lower;
     }
 
     public static TransportVersion getNextVersion(TransportVersion version) {
@@ -100,16 +99,8 @@ public class TransportVersionUtils {
     }
 
     public static TransportVersion getNextVersion(TransportVersion version, boolean createIfNecessary) {
-        int place = Collections.binarySearch(ALL_VERSIONS, version);
-        if (place < 0) {
-            // version does not exist - need the item at the index this version should be inserted
-            place = -(place + 1);
-        } else {
-            // need the *next* version
-            place++;
-        }
-
-        if (place < 0 || place >= ALL_VERSIONS.size()) {
+        TransportVersion higher = allReleasedVersions().higher(version);
+        if (higher == null) {
             if (createIfNecessary) {
                 // create a new transport version one greater than specified
                 return new TransportVersion(version.id() + 1);
@@ -117,7 +108,7 @@ public class TransportVersionUtils {
                 throw new IllegalArgumentException("couldn't find any released versions after [" + version + "]");
             }
         }
-        return ALL_VERSIONS.get(place);
+        return higher;
     }
 
     /** Returns a random {@code TransportVersion} that is compatible with {@link TransportVersion#current()} */
