@@ -48,7 +48,6 @@ import org.elasticsearch.xpack.core.ilm.WaitForRolloverReadyStep;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -57,7 +56,7 @@ import java.util.stream.Collectors;
 
 import static org.elasticsearch.cluster.metadata.LifecycleExecutionState.ILM_CUSTOM_METADATA_KEY;
 import static org.elasticsearch.xpack.core.ilm.PhaseCacheManagement.eligibleToCheckForRefresh;
-import static org.elasticsearch.xpack.core.ilm.PhaseCacheManagement.refreshPhaseDefinition;
+import static org.elasticsearch.xpack.core.ilm.PhaseCacheManagementTests.refreshPhaseDefinition;
 import static org.elasticsearch.xpack.ilm.IndexLifecycleRunnerTests.createOneStepPolicyStepRegistry;
 import static org.elasticsearch.xpack.ilm.IndexLifecycleTransition.moveStateToNextActionAndUpdateCachedPhase;
 import static org.elasticsearch.xpack.ilm.LifecyclePolicyTestsUtils.newTestLifecyclePolicy;
@@ -72,7 +71,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
     public void testMoveClusterStateToNextStep() {
         String indexName = "my_index";
         LifecyclePolicy policy = randomValueOtherThanMany(
-            p -> p.getPhases().size() == 0,
+            p -> p.getPhases().isEmpty(),
             () -> LifecyclePolicyTests.randomTestLifecyclePolicy("policy")
         );
         Phase nextPhase = policy.getPhases()
@@ -80,8 +79,8 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             .stream()
             .findFirst()
             .orElseThrow(() -> new AssertionError("expected next phase to be present"));
-        List<LifecyclePolicyMetadata> policyMetadatas = Collections.singletonList(
-            new LifecyclePolicyMetadata(policy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
+        List<LifecyclePolicyMetadata> policyMetadatas = List.of(
+            new LifecyclePolicyMetadata(policy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong())
         );
         Step.StepKey currentStep = new Step.StepKey("current_phase", "current_action", "current_step");
         Step.StepKey nextStep = new Step.StepKey(nextPhase.getName(), "next_action", "next_step");
@@ -94,7 +93,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             LifecycleExecutionState.builder().build(),
             policyMetadatas
         );
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         PolicyStepsRegistry stepsRegistry = createOneStepPolicyStepRegistry(policy.getName(), new MockStep(nextStep, nextStep));
         ClusterState newClusterState = IndexLifecycleTransition.moveClusterStateToStep(
             index,
@@ -117,7 +116,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         }
 
         clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        index = clusterState.metadata().index(indexName).getIndex();
+        index = clusterState.metadata().getProject().index(indexName).getIndex();
         newClusterState = IndexLifecycleTransition.moveClusterStateToStep(index, clusterState, nextStep, () -> now, stepsRegistry, false);
         assertClusterStateOnNextStep(clusterState, index, currentStep, nextStep, newClusterState, now);
     }
@@ -125,11 +124,11 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
     public void testMoveClusterStateToNextStepSamePhase() {
         String indexName = "my_index";
         LifecyclePolicy policy = randomValueOtherThanMany(
-            p -> p.getPhases().size() == 0,
+            p -> p.getPhases().isEmpty(),
             () -> LifecyclePolicyTests.randomTestLifecyclePolicy("policy")
         );
-        List<LifecyclePolicyMetadata> policyMetadatas = Collections.singletonList(
-            new LifecyclePolicyMetadata(policy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
+        List<LifecyclePolicyMetadata> policyMetadatas = List.of(
+            new LifecyclePolicyMetadata(policy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong())
         );
         Step.StepKey currentStep = new Step.StepKey("current_phase", "current_action", "current_step");
         Step.StepKey nextStep = new Step.StepKey("current_phase", "next_action", "next_step");
@@ -145,7 +144,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
                 .build(),
             policyMetadatas
         );
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         PolicyStepsRegistry stepsRegistry = createOneStepPolicyStepRegistry(policy.getName(), new MockStep(nextStep, nextStep));
         ClusterState newClusterState = IndexLifecycleTransition.moveClusterStateToStep(
             index,
@@ -168,7 +167,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         Settings.Builder indexSettingsBuilder = Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, policy.getName());
 
         clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        index = clusterState.metadata().index(indexName).getIndex();
+        index = clusterState.metadata().getProject().index(indexName).getIndex();
         newClusterState = IndexLifecycleTransition.moveClusterStateToStep(index, clusterState, nextStep, () -> now, stepsRegistry, false);
         assertClusterStateOnNextStep(clusterState, index, currentStep, nextStep, newClusterState, now);
     }
@@ -176,11 +175,11 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
     public void testMoveClusterStateToNextStepSameAction() {
         String indexName = "my_index";
         LifecyclePolicy policy = randomValueOtherThanMany(
-            p -> p.getPhases().size() == 0,
+            p -> p.getPhases().isEmpty(),
             () -> LifecyclePolicyTests.randomTestLifecyclePolicy("policy")
         );
-        List<LifecyclePolicyMetadata> policyMetadatas = Collections.singletonList(
-            new LifecyclePolicyMetadata(policy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
+        List<LifecyclePolicyMetadata> policyMetadatas = List.of(
+            new LifecyclePolicyMetadata(policy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong())
         );
         Step.StepKey currentStep = new Step.StepKey("current_phase", "current_action", "current_step");
         Step.StepKey nextStep = new Step.StepKey("current_phase", "current_action", "next_step");
@@ -196,7 +195,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
                 .build(),
             policyMetadatas
         );
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         PolicyStepsRegistry stepsRegistry = createOneStepPolicyStepRegistry(policy.getName(), new MockStep(nextStep, nextStep));
         ClusterState newClusterState = IndexLifecycleTransition.moveClusterStateToStep(
             index,
@@ -219,7 +218,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         Settings.Builder indexSettingsBuilder = Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, policy.getName());
 
         clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        index = clusterState.metadata().index(indexName).getIndex();
+        index = clusterState.metadata().getProject().index(indexName).getIndex();
         newClusterState = IndexLifecycleTransition.moveClusterStateToStep(index, clusterState, nextStep, () -> now, stepsRegistry, false);
         assertClusterStateOnNextStep(clusterState, index, currentStep, nextStep, newClusterState, now);
     }
@@ -228,7 +227,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         String indexName = "my_index";
         String policyName = "my_policy";
         LifecyclePolicy policy = randomValueOtherThanMany(
-            p -> p.getPhases().size() == 0,
+            p -> p.getPhases().isEmpty(),
             () -> LifecyclePolicyTests.randomTestLifecyclePolicy(policyName)
         );
         Phase nextPhase = policy.getPhases()
@@ -236,8 +235,8 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             .stream()
             .findFirst()
             .orElseThrow(() -> new AssertionError("expected next phase to be present"));
-        List<LifecyclePolicyMetadata> policyMetadatas = Collections.singletonList(
-            new LifecyclePolicyMetadata(policy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
+        List<LifecyclePolicyMetadata> policyMetadatas = List.of(
+            new LifecyclePolicyMetadata(policy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong())
         );
         Step.StepKey currentStepKey = new Step.StepKey("current_phase", "current_action", "current_step");
         Step.StepKey nextStepKey = new Step.StepKey(nextPhase.getName(), "next_action", "next_step");
@@ -252,7 +251,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
 
         Settings.Builder indexSettingsBuilder = Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, policyName);
         ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         ClusterState newClusterState = IndexLifecycleTransition.moveClusterStateToStep(
             index,
             clusterState,
@@ -279,8 +278,8 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(currentStepKey.action());
         lifecycleState.setStep(currentStepKey.name());
 
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), Collections.emptyList());
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), List.of());
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         IllegalArgumentException exception = expectThrows(
             IllegalArgumentException.class,
             () -> IndexLifecycleTransition.moveClusterStateToStep(index, clusterState, nextStepKey, () -> now, stepRegistry, true)
@@ -303,8 +302,8 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(currentStepKey.action());
         lifecycleState.setStep(currentStepKey.name());
 
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), Collections.emptyList());
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), List.of());
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         IllegalArgumentException exception = expectThrows(
             IllegalArgumentException.class,
             () -> IndexLifecycleTransition.moveClusterStateToStep(index, clusterState, nextStepKey, () -> now, stepRegistry, true)
@@ -325,8 +324,8 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setPhase(currentStep.phase());
         lifecycleState.setAction(currentStep.action());
         lifecycleState.setStep(currentStep.name());
-        ClusterState clusterState = buildClusterState(indexName, Settings.builder(), lifecycleState.build(), Collections.emptyList());
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        ClusterState clusterState = buildClusterState(indexName, Settings.builder(), lifecycleState.build(), List.of());
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
 
         ClusterState newClusterState = IndexLifecycleTransition.moveClusterStateToErrorStep(
             index,
@@ -359,8 +358,8 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setPhase(currentStep.phase());
         lifecycleState.setAction(currentStep.action());
         lifecycleState.setStep(currentStep.name());
-        ClusterState clusterState = buildClusterState(indexName, Settings.builder(), lifecycleState.build(), Collections.emptyList());
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        ClusterState clusterState = buildClusterState(indexName, Settings.builder(), lifecycleState.build(), List.of());
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         ClusterState newClusterState = IndexLifecycleTransition.addStepInfoToClusterState(index, clusterState, stepInfo);
         assertClusterStateStepInfo(clusterState, index, currentStep, newClusterState, stepInfo);
         ClusterState runAgainClusterState = IndexLifecycleTransition.addStepInfoToClusterState(index, newClusterState, stepInfo);
@@ -378,11 +377,9 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(currentStep.action());
         lifecycleState.setStep(currentStep.name());
         List<LifecyclePolicyMetadata> policyMetadatas = new ArrayList<>();
-        policyMetadatas.add(
-            new LifecyclePolicyMetadata(oldPolicy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
-        );
+        policyMetadatas.add(new LifecyclePolicyMetadata(oldPolicy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong()));
         ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         Index[] indices = new Index[] { index };
         List<String> failedIndexes = new ArrayList<>();
 
@@ -399,9 +396,9 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             indexName,
             indexSettingsBuilder,
             LifecycleExecutionState.builder().build(),
-            Collections.emptyList()
+            List.of()
         );
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         Index[] indices = new Index[] { index };
         List<String> failedIndexes = new ArrayList<>();
 
@@ -414,7 +411,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
     public void testRemovePolicyForIndexIndexDoesntExist() {
         String indexName = randomAlphaOfLength(10);
         String oldPolicyName = "old_policy";
-        LifecyclePolicy oldPolicy = newTestLifecyclePolicy(oldPolicyName, Collections.emptyMap());
+        LifecyclePolicy oldPolicy = newTestLifecyclePolicy(oldPolicyName, Map.of());
         Step.StepKey currentStep = AbstractStepTestCase.randomStepKey();
         Settings.Builder indexSettingsBuilder = Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, oldPolicyName);
         LifecycleExecutionState.Builder lifecycleState = LifecycleExecutionState.builder();
@@ -422,9 +419,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(currentStep.action());
         lifecycleState.setStep(currentStep.name());
         List<LifecyclePolicyMetadata> policyMetadatas = new ArrayList<>();
-        policyMetadatas.add(
-            new LifecyclePolicyMetadata(oldPolicy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
-        );
+        policyMetadatas.add(new LifecyclePolicyMetadata(oldPolicy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong()));
         ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
         Index index = new Index("doesnt_exist", "im_not_here");
         Index[] indices = new Index[] { index };
@@ -448,11 +443,9 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(currentStep.action());
         lifecycleState.setStep(currentStep.name());
         List<LifecyclePolicyMetadata> policyMetadatas = new ArrayList<>();
-        policyMetadatas.add(
-            new LifecyclePolicyMetadata(oldPolicy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
-        );
+        policyMetadatas.add(new LifecyclePolicyMetadata(oldPolicy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong()));
         ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         Index[] indices = new Index[] { index };
         List<String> failedIndexes = new ArrayList<>();
 
@@ -475,11 +468,9 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(currentStep.action());
         lifecycleState.setStep(currentStep.name());
         List<LifecyclePolicyMetadata> policyMetadatas = new ArrayList<>();
-        policyMetadatas.add(
-            new LifecyclePolicyMetadata(oldPolicy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
-        );
+        policyMetadatas.add(new LifecyclePolicyMetadata(oldPolicy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong()));
         ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         Index[] indices = new Index[] { index };
         List<String> failedIndexes = new ArrayList<>();
 
@@ -756,7 +747,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         LifecyclePolicy policy = createPolicy(policyName, failedStepKey, null);
         LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(
             policy,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
@@ -771,13 +762,8 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setStep(errorStepKey.name());
         lifecycleState.setStepTime(now);
         lifecycleState.setFailedStep(failedStepKey.name());
-        ClusterState clusterState = buildClusterState(
-            indexName,
-            indexSettingsBuilder,
-            lifecycleState.build(),
-            Collections.singletonList(policyMetadata)
-        );
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), List.of(policyMetadata));
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         ClusterState nextClusterState = IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(
             clusterState,
             indexName,
@@ -786,7 +772,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             false
         );
         IndexLifecycleRunnerTests.assertClusterStateOnNextStep(clusterState, index, errorStepKey, failedStepKey, nextClusterState, now);
-        LifecycleExecutionState executionState = nextClusterState.metadata().index(indexName).getLifecycleExecutionState();
+        LifecycleExecutionState executionState = nextClusterState.metadata().getProject().index(indexName).getLifecycleExecutionState();
         assertThat("manual move to failed step should not count as a retry", executionState.failedStepRetryCount(), is(nullValue()));
     }
 
@@ -802,7 +788,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         LifecyclePolicy policy = createPolicy(policyName, failedStepKey, null);
         LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(
             policy,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
@@ -817,12 +803,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setStep(errorStepKey.name());
         lifecycleState.setStepTime(now);
         lifecycleState.setFailedStep(failedStepKey.name());
-        ClusterState clusterState = buildClusterState(
-            indexName,
-            indexSettingsBuilder,
-            lifecycleState.build(),
-            Collections.singletonList(policyMetadata)
-        );
+        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), List.of(policyMetadata));
         IllegalArgumentException exception = expectThrows(
             IllegalArgumentException.class,
             () -> IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(clusterState, indexName, () -> now, policyRegistry, false)
@@ -840,7 +821,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             existingIndexName,
             Settings.builder(),
             LifecycleExecutionState.builder().build(),
-            Collections.emptyList()
+            List.of()
         );
         IllegalArgumentException exception = expectThrows(
             IllegalArgumentException.class,
@@ -863,7 +844,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(errorStepKey.action());
         lifecycleState.setStep(errorStepKey.name());
         lifecycleState.setFailedStep(failedStepKey.name());
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), Collections.emptyList());
+        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), List.of());
         IllegalArgumentException exception = expectThrows(
             IllegalArgumentException.class,
             () -> IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(clusterState, indexName, () -> now, policyRegistry, false)
@@ -883,7 +864,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setPhase(failedStepKey.phase());
         lifecycleState.setAction(failedStepKey.action());
         lifecycleState.setStep(failedStepKey.name());
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), Collections.emptyList());
+        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), List.of());
         IllegalArgumentException exception = expectThrows(
             IllegalArgumentException.class,
             () -> IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(clusterState, indexName, () -> now, policyRegistry, false)
@@ -906,7 +887,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         LifecyclePolicy policy = createPolicy(policyName, failedStepKey, null);
         LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(
             policy,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
@@ -923,13 +904,8 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setFailedStep(failedStepKey.name());
         String initialStepInfo = randomAlphaOfLengthBetween(10, 50);
         lifecycleState.setStepInfo(initialStepInfo);
-        ClusterState clusterState = buildClusterState(
-            indexName,
-            indexSettingsBuilder,
-            lifecycleState.build(),
-            Collections.singletonList(policyMetadata)
-        );
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), List.of(policyMetadata));
+        Index index = clusterState.metadata().getProject().index(indexName).getIndex();
         ClusterState nextClusterState = IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(
             clusterState,
             indexName,
@@ -938,7 +914,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             true
         );
         IndexLifecycleRunnerTests.assertClusterStateOnNextStep(clusterState, index, errorStepKey, failedStepKey, nextClusterState, now);
-        LifecycleExecutionState executionState = nextClusterState.metadata().index(indexName).getLifecycleExecutionState();
+        LifecycleExecutionState executionState = nextClusterState.metadata().getProject().index(indexName).getLifecycleExecutionState();
         assertThat(executionState.failedStepRetryCount(), is(1));
         assertThat(executionState.previousStepInfo(), is(initialStepInfo));
     }
@@ -976,13 +952,11 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         Map<String, LifecycleAction> actions = new HashMap<>();
         actions.put("set_priority", new SetPriorityAction(100));
         Phase hotPhase = new Phase("hot", TimeValue.ZERO, actions);
-        Map<String, Phase> phases = Collections.singletonMap("hot", hotPhase);
+        Map<String, Phase> phases = Map.of("hot", hotPhase);
         LifecyclePolicy currentPolicy = new LifecyclePolicy("my-policy", phases);
 
         List<LifecyclePolicyMetadata> policyMetadatas = new ArrayList<>();
-        policyMetadatas.add(
-            new LifecyclePolicyMetadata(currentPolicy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
-        );
+        policyMetadatas.add(new LifecyclePolicyMetadata(currentPolicy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong()));
 
         Step.StepKey errorStepKey = new Step.StepKey("hot", RolloverAction.NAME, ErrorStep.NAME);
         PolicyStepsRegistry stepsRegistry = createOneStepPolicyStepRegistry("my-policy", new ErrorStep(errorStepKey));
@@ -1001,7 +975,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             false
         );
 
-        LifecycleExecutionState nextLifecycleExecutionState = newState.metadata().index(indexName).getLifecycleExecutionState();
+        LifecycleExecutionState nextLifecycleExecutionState = newState.metadata()
+            .getProject()
+            .index(indexName)
+            .getLifecycleExecutionState();
         assertThat(
             "we musn't refresh the cache definition if the failed step is not part of the real policy anymore",
             nextLifecycleExecutionState.phaseDefinition(),
@@ -1040,9 +1017,9 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         actions.put("rollover", new RolloverAction(null, null, null, 1L, null, null, null, null, null, null));
         actions.put("set_priority", new SetPriorityAction(100));
         Phase hotPhase = new Phase("hot", TimeValue.ZERO, actions);
-        Map<String, Phase> phases = Collections.singletonMap("hot", hotPhase);
+        Map<String, Phase> phases = Map.of("hot", hotPhase);
         LifecyclePolicy newPolicy = new LifecyclePolicy("my-policy", phases);
-        LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(newPolicy, Collections.emptyMap(), 2L, 2L);
+        LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(newPolicy, Map.of(), 2L, 2L);
 
         ClusterState existingState = ClusterState.builder(ClusterState.EMPTY_STATE)
             .metadata(Metadata.builder(Metadata.EMPTY_METADATA).put(meta, false).build())
@@ -1050,7 +1027,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
 
         ClusterState changedState = refreshPhaseDefinition(existingState, index, policyMetadata);
 
-        IndexMetadata newIdxMeta = changedState.metadata().index(index);
+        IndexMetadata newIdxMeta = changedState.metadata().getProject().index(index);
         LifecycleExecutionState afterExState = newIdxMeta.getLifecycleExecutionState();
         Map<String, String> beforeState = new HashMap<>(exState.build().asMap());
         beforeState.remove("phase_definition");
@@ -1185,7 +1162,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         actions.put("rollover", new RolloverAction(null, null, null, 1L, null, null, null, null, null, null));
         actions.put("set_priority", new SetPriorityAction(100));
         Phase hotPhase = new Phase("hot", TimeValue.ZERO, actions);
-        Map<String, Phase> phases = Collections.singletonMap("hot", hotPhase);
+        Map<String, Phase> phases = Map.of("hot", hotPhase);
         LifecyclePolicy currentPolicy = new LifecyclePolicy("my-policy", phases);
 
         {
@@ -1195,10 +1172,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             Map<String, LifecycleAction> actionsWithoutRollover = new HashMap<>();
             actionsWithoutRollover.put("set_priority", new SetPriorityAction(100));
             Phase hotPhaseNoRollover = new Phase("hot", TimeValue.ZERO, actionsWithoutRollover);
-            Map<String, Phase> phasesNoRollover = Collections.singletonMap("hot", hotPhaseNoRollover);
+            Map<String, Phase> phasesNoRollover = Map.of("hot", hotPhaseNoRollover);
             LifecyclePolicyMetadata updatedPolicyMetadata = new LifecyclePolicyMetadata(
                 new LifecyclePolicy("my-policy", phasesNoRollover),
-                Collections.emptyMap(),
+                Map.of(),
                 2L,
                 2L
             );
@@ -1233,10 +1210,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             Map<String, LifecycleAction> actionsWitoutSetPriority = new HashMap<>();
             actionsWitoutSetPriority.put("rollover", new RolloverAction(null, null, null, 1L, null, null, null, null, null, null));
             Phase hotPhaseNoSetPriority = new Phase("hot", TimeValue.ZERO, actionsWitoutSetPriority);
-            Map<String, Phase> phasesWithoutSetPriority = Collections.singletonMap("hot", hotPhaseNoSetPriority);
+            Map<String, Phase> phasesWithoutSetPriority = Map.of("hot", hotPhaseNoSetPriority);
             LifecyclePolicyMetadata updatedPolicyMetadata = new LifecyclePolicyMetadata(
                 new LifecyclePolicy("my-policy", phasesWithoutSetPriority),
-                Collections.emptyMap(),
+                Map.of(),
                 2L,
                 2L
             );
@@ -1275,7 +1252,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             assert unsafeStep == null || safeStep.phase().equals(unsafeStep.phase()) == false
                 : "safe and unsafe actions must be in different phases";
             Map<String, LifecycleAction> actions = new HashMap<>();
-            List<Step> steps = Collections.singletonList(new MockStep(safeStep, null));
+            List<Step> steps = List.of(new MockStep(safeStep, null));
             MockAction safeAction = new MockAction(steps, true);
             actions.put(safeAction.getWriteableName(), safeAction);
             Phase phase = new Phase(safeStep.phase(), TimeValue.timeValueMillis(0), actions);
@@ -1284,7 +1261,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         if (unsafeStep != null) {
             assert MockAction.NAME.equals(unsafeStep.action()) : "The unsafe action needs to be MockAction.NAME";
             Map<String, LifecycleAction> actions = new HashMap<>();
-            List<Step> steps = Collections.singletonList(new MockStep(unsafeStep, null));
+            List<Step> steps = List.of(new MockStep(unsafeStep, null));
             MockAction unsafeAction = new MockAction(steps, false);
             actions.put(unsafeAction.getWriteableName(), unsafeAction);
             Phase phase = new Phase(unsafeStep.phase(), TimeValue.timeValueMillis(0), actions);
@@ -1323,7 +1300,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         Metadata metadata = clusterState.metadata();
         assertNotNull(metadata);
 
-        IndexMetadata indexMetadata = metadata.getIndexSafe(index);
+        IndexMetadata indexMetadata = metadata.getProject().getIndexSafe(index);
         assertNotNull(indexMetadata);
 
         assertNull(indexMetadata.getLifecyclePolicyName());
@@ -1346,10 +1323,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         assertNotSame(oldClusterState, newClusterState);
         Metadata newMetadata = newClusterState.metadata();
         assertNotSame(oldClusterState.metadata(), newMetadata);
-        IndexMetadata newIndexMetadata = newMetadata.getIndexSafe(index);
-        assertNotSame(oldClusterState.metadata().index(index), newIndexMetadata);
-        LifecycleExecutionState newLifecycleState = newClusterState.metadata().index(index).getLifecycleExecutionState();
-        LifecycleExecutionState oldLifecycleState = oldClusterState.metadata().index(index).getLifecycleExecutionState();
+        IndexMetadata newIndexMetadata = newMetadata.getProject().getIndexSafe(index);
+        assertNotSame(oldClusterState.metadata().getProject().index(index), newIndexMetadata);
+        LifecycleExecutionState newLifecycleState = newClusterState.metadata().getProject().index(index).getLifecycleExecutionState();
+        LifecycleExecutionState oldLifecycleState = oldClusterState.metadata().getProject().index(index).getLifecycleExecutionState();
         assertNotSame(oldLifecycleState, newLifecycleState);
         assertEquals(nextStep.phase(), newLifecycleState.phase());
         assertEquals(nextStep.action(), newLifecycleState.action());
@@ -1397,10 +1374,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         assertNotSame(oldClusterState, newClusterState);
         Metadata newMetadata = newClusterState.metadata();
         assertNotSame(oldClusterState.metadata(), newMetadata);
-        IndexMetadata newIndexMetadata = newMetadata.getIndexSafe(index);
-        assertNotSame(oldClusterState.metadata().index(index), newIndexMetadata);
-        LifecycleExecutionState newLifecycleState = newClusterState.metadata().index(index).getLifecycleExecutionState();
-        LifecycleExecutionState oldLifecycleState = oldClusterState.metadata().index(index).getLifecycleExecutionState();
+        IndexMetadata newIndexMetadata = newMetadata.getProject().getIndexSafe(index);
+        assertNotSame(oldClusterState.metadata().getProject().index(index), newIndexMetadata);
+        LifecycleExecutionState newLifecycleState = newClusterState.metadata().getProject().index(index).getLifecycleExecutionState();
+        LifecycleExecutionState oldLifecycleState = oldClusterState.metadata().getProject().index(index).getLifecycleExecutionState();
         assertNotSame(oldLifecycleState, newLifecycleState);
         assertEquals(currentStep.phase(), newLifecycleState.phase());
         assertEquals(currentStep.action(), newLifecycleState.action());
@@ -1425,10 +1402,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         assertNotSame(oldClusterState, newClusterState);
         Metadata newMetadata = newClusterState.metadata();
         assertNotSame(oldClusterState.metadata(), newMetadata);
-        IndexMetadata newIndexMetadata = newMetadata.getIndexSafe(index);
-        assertNotSame(oldClusterState.metadata().index(index), newIndexMetadata);
-        LifecycleExecutionState newLifecycleState = newClusterState.metadata().index(index).getLifecycleExecutionState();
-        LifecycleExecutionState oldLifecycleState = oldClusterState.metadata().index(index).getLifecycleExecutionState();
+        IndexMetadata newIndexMetadata = newMetadata.getProject().getIndexSafe(index);
+        assertNotSame(oldClusterState.metadata().getProject().index(index), newIndexMetadata);
+        LifecycleExecutionState newLifecycleState = newClusterState.metadata().getProject().index(index).getLifecycleExecutionState();
+        LifecycleExecutionState oldLifecycleState = oldClusterState.metadata().getProject().index(index).getLifecycleExecutionState();
         assertNotSame(oldLifecycleState, newLifecycleState);
         assertEquals(currentStep.phase(), newLifecycleState.phase());
         assertEquals(currentStep.action(), newLifecycleState.action());
@@ -1436,6 +1413,6 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         assertEquals(expectedstepInfoValue, newLifecycleState.stepInfo());
         assertEquals(oldLifecycleState.phaseTime(), newLifecycleState.phaseTime());
         assertEquals(oldLifecycleState.actionTime(), newLifecycleState.actionTime());
-        assertEquals(newLifecycleState.stepTime(), newLifecycleState.stepTime());
+        assertEquals(oldLifecycleState.stepTime(), newLifecycleState.stepTime());
     }
 }
